2003-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkBind.c (TkpGetBindingXEvent): Add helper method
	that can be used to query the XEvent* for the currently
	executing binding.
	* generic/tkInt.h: Declare TkpGetBindingXEvent.
	* win/tkWinMenu.c (MenuKeyBindProc, TkWinMenuKeyObjCmd,
	TkpInitializeMenuBindings): Rename MenuKeyBindProc to
	TkWinMenuKeyObjCmd and convert it into a Tcl command
	named tk::tkWinMenuKey. Bind keyboard accelerator
	actions to this Tcl command instead of using a native
	C binding. This makes it possible to extend the
	existing binding with Tcl code and makes the Windows
	version work just like the unix version.
	
2003-04-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Subst TCL_LIBS instead of
	DL_LIBS and MATH_LIBS.
	* unix/configure: Regen.
	* unix/configure.in: Remove SC_ENABLE_THREADS
	invocation. Thread support in an extension
	should be automatic when Tcl is compiled
	with thread support. Add AC_DEFINE calls
	to set TCL_THREADS, _REENTRANT, and
	_THREAD_SAFE since this was done in
	SC_ENABLE_THREADS. Remove socket and math
	lib checks since these are already done in
	the Tcl configure script.
	* unix/tcl.m4: Update from Tcl to get
	TCL_LIBS fix. This fixes bug 597847
	which was caused by improper linking.
	* unix/tkConfig.sh.in: Subst TCL_LIBS
	instead of MATH_LIBS and DL_LIBS.
	[Bug 597847]

2003-04-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set stub lib flag based
	on new LIBFLAGSUFFIX variable.
	* win/tcl.m4: Update from Tcl to get new
	LIBFLAGSUFFIX variable.

2003-04-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Don't set TCL_DLL_FILE,
	TCL_LIB_FILE, TCL_STUB_LIB_FILE, TCL_STUB_LIB_FLAG,
	and TCL_BUILD_STUB_LIB_SPEC. These variables are
	already set in tclConfig.sh. Don't subst vars
	that are either not used, or already covered by
	a subst in SC_LOAD_TCLCONFIG.
	[Bug 691908]
